fix CSS flexbox broken in campaign insert clone view

--- a/app/bundles/CampaignBundle/Assets/css/campaign.css
+++ b/app/bundles/CampaignBundle/Assets/css/campaign.css
@@ -50,6 +50,7 @@
 #CampaignPasteContainer {
     position: relative;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     margin-top: 10px;
 }
